--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -4,6 +4,15 @@
     <title>Image Application</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Settings Button -->
+<button id="settingsBtn" style="position: absolute; top: 10px; right: 10px; z-index: 1000;">⚙️ Settings</button>
+
+<!-- Settings Modal -->
+<div id="settingsModal" style="display: none; position: fixed; top: 50px; right: 10px; background: white; border: 1px solid #ccc; padding: 10px; z-index: 1001;">
+  <label for="topK">Top-K:</label>
+  <input type="number" id="topK" min="1" value="5" />
+  <button id="saveSettings">Save</button>
+</div>
 <body>
     <input type="file" id="multipleImages" multiple>
     <input type="file" id="singleImage">
