--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -11,6 +11,17 @@
 <div id="settingsModal" style="display: none; position: fixed; top: 50px; right: 10px; background: white; border: 1px solid #ccc; padding: 10px; z-index: 1001;">
   <label for="topK">Top-K:</label>
   <input type="number" id="topK" min="1" value="5" />
+
+  <label for="modelSelect">Model:</label>
+  <select id="modelSelect">
+    <option value="clip">CLIP</option>
+    <option value="resnet">ResNet</option>
+    <option value="vit">ViT</option>
+  </select><br />
+
+  <label for="threshold">Threshold:</label>
+  <input type="number" id="threshold" min="0" max="1" step="0.01" value="0.5" /><br />
+
   <button id="saveSettings">Save</button>
 </div>
 <body>
