--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -4,6 +4,11 @@
     <title>Image Application</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<div class="logo-bar">
+  <img src="icon.png" alt="Custom Icon" class="custom-icon" />
+</div>
+
 <!-- Settings Button -->
 <button id="settingsBtn" style="position: absolute; top: 10px; right: 10px; z-index: 1000;">⚙️ Settings</button>
 
