--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -15,10 +15,11 @@
 <!-- Settings Modal -->
 <div id="settingsModal" style="display: none; position: fixed; top: 50px; right: 10px; background: white; border: 1px solid #ccc; padding: 10px; z-index: 1001;">
   
-  <label for="modelSelect">Model:</label>
+  <!-- <label for="modelSelect">Model:</label>
   <select id="modelSelect">
     <option value="laion_openclip">laion_openclip</option>
-  </select><br />
+    <option value="dino">DINO</option>
+  </select><br /> -->
   
   <label for="topK">Top-K:</label>
   <input type="number" id="topK" min="1" value="5" /><br />
