--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <div class="logo-bar">
-  <img src="icon.png" alt="Custom Icon" class="custom-icon" />
+  <img src="icons/icon.png" alt="Custom Icon" class="custom-icon" />
 </div>
 
 <!-- Settings Button -->
