--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Image Application</title>
+    <title>Surrogate: image-based similarity explorer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
