--- a/surrogate/static/index.html
+++ b/surrogate/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Surrogate: image-based similarity explorer</title>
+    <title>🪬 Surrogate: image-based similarity explorer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -26,12 +26,16 @@
 
   <label for="threshold">Similarity threshold:</label>
   <input type="number" id="threshold" min="0" max="1" step="0.1" value="0.5" /><br />
-
+  
   <button id="saveSettings">Save</button>
 </div>
 <body>
+  <label for="multipleImages">📚
     <input type="file" id="multipleImages" multiple>
+  </label>
+  <label for="singleImage">❔
     <input type="file" id="singleImage">
+  </label>
     <div id="large-image-container"></div>
     <div id="image-grid"></div>
     <script src="scripts.js"></script>
